<resources>
    <string name="app_name">FitTrack</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_week_s_progress">This week\'s Progress</string>
    <string name="total_steps">Total steps</string>
    <string name="_9_123">9,123</string>
    <string name="steps">steps</string>
    <string name="username">Username</string>
</resources>